# FiTargetTool

./: .gitignore  Clientes.db  Clientes.sqbpro  README.md  main.py  package.json  pyproject.toml  requirements.txt
Components/: AlertPanel.py  AutoCompleteSuggestionData.py  PhotoComponent.py  RoutineComponent.py  UserData.py
Controler/: Controler.py  Create.py  Delete.py  Update.py
DataPanels/: AddPeso.py  ChangeDataUser.py  ChangeRoutine.py  CreateClient.py  CreateRoutine.py  ProgressGraphics.py  ShowFullDataClient.py
Model/: Cliente.py  Dia.py  Ejercicios.py  Peso.py  Photo.py  Progreso.py  Rutina.py
Utils/: generate_models_json.py
View/: AutoCompleteSuggestionData.py  ClienteViewFull.py  EditData.py  InfoClienteView.py  ProgressGraphics.py  RoutineRouteUpdateView.py  RoutineRouteView.py  RutineView.py  change_view.py
Views/: ClientView.py  PrincipalView.py  RoutineAdd.py  RoutineDelete.py  RoutineEdit.py  RoutineOrder.py  RoutineUpdate.py  RoutineView.py
test/: json_testing.py  page.py  test_json.json
